# typst-studio

./: .gitignore  README.md  README_zh.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
.omc/autopilot/: spec.md
.omc/plans/: autopilot-impl.md
.omc/sessions/: 18df98d2-50e1-4881-8664-07630526cdd4.json  76b135ac-b253-441c-a1ad-17d04a47120c.json  d98914df-350a-46ff-b225-a746495b1fcd.json
.omc/state/: mission-state.json
docs/: themes.md
docs/superpowers/plans/: 2026-07-02-paste-rich-text.md  2026-07-04-single-session-lsp-task11-verification.md  2026-07-05-activity-bar-extensible-sidebar.md
docs/superpowers/specs/: 2026-06-30-typst-studio-design.md  2026-07-01-lsp-integration-design.md  2026-07-02-paste-rich-text-design.md  2026-07-02-settings-system-design.md  2026-07-03-document-workspace-architecture-design.md  2026-07-04-single-session-lsp-architecture-design.md  2026-07-04-stability-foundations-design.md  2026-07-05-format-toolbar-design.md  ipc-contract.md
examples/bib-demo/: refs.yml
examples/readme-demo/: README.md  poster.typ  project-report.typ  quick-start.typ
scripts/: fetch-grammar.mjs  fetch-monaco-assets.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/settings/: manifest.json
src-tauri/src/: diagnostics.rs  error.rs  lib.rs  main.rs  paths.rs  startup.rs
src-tauri/src/domain/: bib_entry.rs  compile_result.rs  compile_status.rs  diagnostics.rs  disk_version.rs  document.rs  file_kind.rs  git_status.rs  mod.rs  outline.rs  package_catalog.rs  path.rs  registry.rs  search.rs  source_map.rs
src-tauri/src/fs/: downloader.rs  mod.rs  package_index.rs  packages.rs  resolver.rs  search.rs  tree.rs  watcher.rs
src-tauri/src/git/: mod.rs  operations.rs  status.rs
src-tauri/src/ipc/: ai_commands.rs  bib_commands.rs  commands.rs  conflict_commands.rs  error.rs  events.rs  formula_commands.rs  fs_commands.rs  git_commands.rs  menu.rs  menu_labels.rs  mod.rs  net_commands.rs  package_commands.rs  recovery_commands.rs  session_commands.rs  settings_commands.rs  state.rs  theme_commands.rs
src-tauri/src/languageserver/: mod.rs  service.rs
src-tauri/src/lsp/: framing.rs  manager.rs  mod.rs  relay.rs
src-tauri/src/net/: client.rs  error.rs  fetch.rs  mod.rs
src-tauri/src/persistence/: atomic.rs  backup.rs  migrate.rs  mod.rs  recovery.rs
src-tauri/src/project/: mod.rs  project.rs  virtual_fs.rs
src-tauri/src/render/: mod.rs  outline.rs  pdf.rs  pipeline.rs  png.rs  source_map.rs  svg.rs
src-tauri/src/service/: compile_service.rs  compile_supervisor.rs  compile_worker.rs  document_service.rs  editor_service.rs  export_service.rs  file_routing.rs  lsp_service.rs  mod.rs  package_service.rs  save_coordinator.rs  session.rs  tab_state.rs  tab_store.rs  theme_service.rs  trash.rs  watcher_health.rs  workspace_service.rs
src-tauri/src/settings/: config.rs  manifest.rs  mod.rs  service.rs  store.rs  window.rs
src-tauri/src/typst_engine/: compiler.rs  font_loader.rs  mod.rs  source_provider.rs  vfs.rs  world.rs
src-tauri/themes/accent-green/: theme.css  theme.json
src-tauri/themes/accent-indigo/: theme.css  theme.json
src-tauri/themes/accent-purple/: theme.css  theme.json
src-tauri/themes/carbon-dark/: theme.css  theme.json
src-tauri/themes/graphite/: theme.css  theme.json
src-tauri/themes/sepia/: theme.css  theme.json
src/assets/symbols/: typst-symbols.json
src/components/Assistant/: AssistantPanel.css  AssistantPanel.tsx  DiffCard.tsx  Markdown.tsx  Message.tsx  aiStream.ts  tauriFetch.ts
src/components/CommandBar/: Breadcrumb.tsx  CommandBar.tsx
src/components/CommandPalette/: CommandPalette.tsx  fuzzyMatch.ts
src/components/Diagnostics/: DiagnosticsPanel.tsx
src/components/Dialogs/: ConfirmDialog.tsx  ConflictDialog.tsx  RecoveryDialog.tsx
src/components/Editor/: DirectMonacoEditor.tsx  MonacoEditor.tsx  appLanguageClient.ts  diagnostics.ts  documentUri.ts  editorApiRef.ts  editorEdit.ts  editorModelSync.ts  editorOptions.ts  formatDocument.ts  imageIo.ts  languageId.ts  lspClient.ts  lspDiagnosticsBridge.ts  lspDiagnosticsBridgeHelpers.ts  monacoModelRegistry.ts  saveAsMigration.ts  sha1.ts  typstHighlighting.ts  typstLanguage.ts  usePasteConvert.ts  workspaceApplyEditHandler.ts  workspaceEdit.ts  workspaceEditApplier.ts
src/components/FormatToolbar/: FormatToolbar.tsx  FormatToolbarButton.tsx  LinkModal.tsx  TableGridPicker.tsx  buildTableSnippet.ts  formatActions.ts  useInsertImage.ts
src/components/FormulaModal/: FormulaModal.tsx  insertTypstMath.ts
src/components/Outline/: OutlinePanel.tsx
src/components/Preview/: ImageViewer.tsx  MarkdownPreview.tsx  PdfViewer.tsx  PreviewPane.tsx  SvgPage.tsx  previewMapping.ts
src/components/Search/: SearchPanel.tsx
src/extensions/: api.ts  hooks.ts  index.ts  registry.ts
src/extensions/assistant/: index.ts
src/hooks/: useAppCommands.ts  useAutosave.ts  useDebounce.ts  useExternalFileRouting.ts  useLanguage.ts  useLspWorkspaceReconnect.ts  useSetting.ts  useStartupSession.ts  useTheme.ts  useTypstCompile.ts  useWheelZoom.ts  useWindowRestore.ts
src/i18n/: index.ts  settingsManifest.ts
src/lib/: aiLog.ts  aiProxy.ts  assistantPath.ts  commands.ts  compileTiming.ts  ipc-error.ts  layoutState.ts  openFile.ts  openLink.ts  platform.ts  saveDocument.ts  session.ts  settings-types.ts  tauri.ts  types.ts  ui-types.ts  viewerByteCache.ts  windowState.ts  workspacePath.ts
src/store/: assistantPrompt.ts  assistantStore.ts  assistantTools.ts  bibliographyStore.ts  commandPaletteStore.ts  conflictDialogStore.ts  diagnosticsStore.ts  dialogStore.ts  documentsStore.ts  explorerSelectionStore.ts  fileClipboardStore.ts  formulaModalStore.ts  gitStore.ts  lspStore.ts  packagesStore.ts  recoveryStore.ts  saveStateStore.ts  searchStore.ts  settingsStore.ts  startupProblemsStore.ts  symbolsStore.ts  tabsStore.ts  themeStore.ts  uiStore.ts  watcherHealthStore.ts  workspaceStore.ts
src/styles/: global.css
(+175 files in other folders)
