[package]
name = "typst-studio"
version = "0.1.0"
description = "A Typst visual editor with live SVG preview"
authors = ["Typst Studio"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "typst_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
# Enables ts-rs type export tests (run `cargo test --features export-types` to regenerate)
export-types = ["dep:ts-rs"]

[dependencies]
# `devtools`: enables `WebviewWindow::open_devtools()` in release builds. Used
# by the Settings → Diagnostics "Open developer tools" action so users can
# self-debug rendering/IPC issues in shipped builds (the F12 accelerator is
# otherwise a no-op in release). The feature compiles in but is inert unless
# `open_devtools()` is actually called.
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# Single-instance enforcement + .typ file routing (§6.1). Desktop-only — the
# crate has no mobile build, so the `.plugin(...)` registration in lib.rs is
# gated by `#[cfg(desktop)]`. The dep is kept unconditional because a target-cfg
# table here would accidentally swallow the deps below it; on mobile the crate
# compiles but is never linked into the app (the only call site is cfg-gated).
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Strip Windows `\\?\` verbatim prefix from canonicalized paths. Rust's
# `Path::canonicalize` returns verbatim paths on Windows (via
# `GetFinalPathNameByHandle`); those bypass Win32 path parsing, so a frontend
# that joins them with `/` separators (or any code that mixes `/` and `\`)
# hits `ERROR_INVALID_NAME` (os error 123). `dunce::simplified` removes the
# prefix when it's safe, restoring ordinary Win32 paths. No-op on non-Windows.
dunce = "1"

# Typst engine (official crates, pinned to 0.15)
typst = "0.15"
# typst-layout defines `PagedDocument`/`Page`, the concrete renderable document
# type required by every `typst-svg`/`typst-pdf`/`typst-render` entry point.
# The `typst` crate depends on it but does not re-export it, and the render
# crates take it by reference without re-exporting it either, so any caller of
# `typst_svg::svg(..)` / `typst_pdf::pdf(..)` / `typst_render::render(..)` must
# name `typst_layout::PagedDocument` directly. It is already a transitive
# dependency (pulled in by typst/typst-pdf/typst-render/typst-svg), so adding it
# here pulls in no new code — it only makes the type nameable.
typst-layout = "0.15"
typst-svg = "0.15"
typst-pdf = "0.15"
typst-render = "0.15"
typst-kit = { version = "0.15", features = ["embedded-fonts", "scan-fonts", "system-files"] }
toml = "0.8"
base64 = "0.21"
comemo = "0.4"

# Async / scheduling
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "io-util", "process"] }

# LSP relay (WebSocket server ↔ tinymist stdio)
tokio-tungstenite = "0.26"
futures-util = "0.3"
which = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Rolling file appender for the diagnostic log (§7.4): daily rotation, max 5
# files. Per-file size cap is approximate (controlled by rotation frequency);
# tracing-appender does not enforce a byte limit.
tracing-appender = "0.2"

# Concurrency
parking_lot = "0.12"

# Error handling
anyhow = "1"
thiserror = "2"
# HTTP types (Origin header parsing for the WS handshake). Same version as
# tauri/tungstenite depend on, so this adds no new compiled code.
http = "1"

# IDs / time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Workspace filesystem watching (file-tree live updates).
notify = "8"

# Recursive directory traversal for the Search view.
walkdir = "2"
# Regex matching for the Search view (literal mode is hand-rolled; regex mode uses this).
regex = "1"

# Pure-Rust Git implementation for the Source Control view (Phase 4).
# Repository is Send but NOT Sync — re-discovered per command, all gix I/O on
# spawn_blocking. `status` gates Repository::status(); `index` exposes the
# in-memory index for stage/unstage.
gix = { version = "0.85", features = ["status", "index"] }

# Safe deletion via the system trash / recycle bin (§5.5). Cross-platform:
# macOS NSWorkspace recycle, Windows FileOperation FO_DELETE with recycle, Linux
# freedesktop Trash.
trash = "5"

# Rust ↔ TypeScript type generation (optional, behind feature)
ts-rs = { version = "12", features = ["uuid-impl", "chrono-impl", "no-serde-warnings"], optional = true }

# Pin: time 0.3.39+ broke `Parsable::parse` API (added required `defaults` arg),
# which cookie 0.18.1 (transitive via tauri) hasn't adapted to. Remove when
# cookie / tauri ships a compatible release.
time = { version = "=0.3.36", default-features = false, features = ["std", "macros", "parsing"] }

# HTTP client for remote image fetch (paste feature) + package downloads
# (typst-kit Downloader). `blocking` is needed for the synchronous Downloader
# trait used by typst's package resolver; the async client covers the paste
# feature. Both share reqwest's core, so the cost is a thin sync adapter.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }

# Stable FFI for GetFileInformationByHandle — used by FileIdentity on Windows
# (std's volume_serial_number/file_index are nightly-only behind windows_by_handle).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
mockito = "1"
tempfile = "3"

